Bug 399687 - Some issues about installed Arch Linux packages
Summary: Some issues about installed Arch Linux packages
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-12 01:35 UTC by Bruce Zhang
Modified: 2018-10-15 14:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (113.77 KB, image/png)
2018-10-12 01:35 UTC, Bruce Zhang
Details
Discover + ArchLinux + Dependencies (133.35 KB, image/png)
2018-10-12 02:05 UTC, Aleix Pol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bruce Zhang 2018-10-12 01:35:58 UTC
Created attachment 115582 [details]
Screenshot

SUMMARY


STEPS TO REPRODUCE
1. Jump to the detail page of one installed Arch Linux packages.

OBSERVED RESULT
1. Provider url is showing .....local/x86-64...... even if this package is available in the pacman reposity.
2. Cannot check the dependencies of installed Arch Linux packages.

EXPECTED RESULT
1. Not sure if it's a bug or not. But provider url should be available.
2. Should list dependencies.

SOFTWARE VERSIONS
KDE Plasma Version: 5.14.0
KDE Frameworks Version: 5.50.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
Nothing.
Comment 1 Aleix Pol 2018-10-12 02:05:09 UTC
Created attachment 115584 [details]
Discover + ArchLinux + Dependencies

This is what it looks like on my system.
Comment 2 Aleix Pol 2018-10-12 02:06:07 UTC
We would need some way to figure out why it's wrong on your system.
Comment 3 Bruce Zhang 2018-10-12 02:34:07 UTC
(In reply to Aleix Pol from comment #1)
> Created attachment 115584 [details]
> Discover + ArchLinux + Dependencies
> 
> This is what it looks like on my system.

Yes, before I install this package, I can see the dependency list.
But after install, the dependency list is gone. (as screenshot above)
Comment 4 Aleix Pol 2018-10-12 13:16:54 UTC
Maybe it makes sense to always show all dependencies? Will have to think about it.
Comment 5 Aleix Pol 2018-10-15 14:06:52 UTC
Git commit 813baa7e92ad7b688f5101ab43873ca7b5a74470 by Aleix Pol.
Committed on 15/10/2018 at 14:04.
Pushed by apol into branch 'Plasma/5.14'.

pk: improve dependencies calculation

Use dependsOn
When already installed, use the installedPackageId

M  +3    -2    libdiscover/backends/PackageKitBackend/PackageKitResource.cpp

https://commits.kde.org/discover/813baa7e92ad7b688f5101ab43873ca7b5a74470