pk: improve dependencies calculation

Use dependsOn
When already installed, use the installedPackageId

BUG: 399687